Remove unnecessary divs

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <!-- Source: https://vincentgarreau.com/particles.js/ -->
     <div id="particles-js"></div>
     <!-- Particle background end -->
-    <!-- Container start -->
-    <div class="container">
+    <!-- Main start -->
+    <main>
         <!-- Into section start -->
-        <div class="section" style="margin-bottom: 3em;">
+        <article class="section" style="margin-bottom: 3em;">
             <div style="display: flex; align-items: baseline; margin-bottom: 0.5em;">
                 <h1>Cyprien Roche</h1>
                 <p>, Product Manager at Selectra</p>
@@ -32,20 +32,18 @@
             <div class="content">
                 <p>I am on a mission to simplify people's lives by building intuitive to use software products</p>
             </div>
-        </div>
+        </article>
         <!-- Intro section end -->
         <!-- Education section start -->
-        <div class="section">
+        <article class="section">
             <h2>Education</h2>
             <!-- ICL sub-section start -->
-            <div class="sub-section">
+            <article class="sub-section">
                 <div class="sub-section-title-top">
                     <h3>Imperial College London</h3>
                     <h4>London, United Kingdom</h4>
                 </div>
-                <div class="sub-section-title-middle">
-                    <a href="https://www.imperial.ac.uk/">Imperial College</a> is a global top ten university with a world-class reputation in engineering
-                </div>
+                <a href="https://www.imperial.ac.uk/" class="sub-section-title-middle">Imperial College</a> is a global top ten university with a world-class reputation in engineering
                 <div class="sub-section-title-bottom">
                     <h4>Master of Engineering, Computing</h4>
                     <h4>Sep 2018 – Jul 2022</h4>
@@ -57,18 +55,16 @@
                     <p>I took part in the “Mums and Dads” scheme where I advised and organised social events for a group of first year students.</p>
                     <p>I was a member of the Department of Computing Society as well as the Salsa and Bachata society.</p>
                 </div>
-            </div>
+            </article>
             <!-- ICL sub-section end -->
             <div class="sub-section divider"></div>
             <!-- UPM sub-section start -->
-            <div class="sub-section">
+            <article class="sub-section">
                 <div class="sub-section-title-top">
                     <h3>Universidad Politecnica de Madrid</h3>
                     <h4>Madrid, Spain</h4>
                 </div>
-                <div class="sub-section-title-middle">
-                    <a href="https://www.upm.es/">UPM</a> is a top university in Spain with a strong reputation in engineering
-                </div>
+                <a href="https://www.upm.es/" class="sub-section-title-middle">UPM</a> is a top university in Spain with a strong reputation in engineering
                 <div class="sub-section-title-bottom">
                     <h4>European Master in Software Engineering</h4>
                     <h4>Sep 2021 – Jul 2022</h4>
@@ -76,18 +72,16 @@
                 <div class="content">
                     <p>I took part in a year-long Erasmus exchange in Madrid with the UPM. I particularly enjoyed the Fundamentals of Business Administration, Requirements Engineering, and Agile Methods for Software Development modules.</p>
                 </div>
-            </div>
+            </article>
             <!-- UPM sub-section end -->
             <div class="sub-section divider"></div>
             <!-- Charterhouse sub-section start -->
-            <div class="sub-section">
+            <article class="sub-section">
                 <div class="sub-section-title-top">
                     <h3>Charterhouse school</h3>
                     <h4>Godalming, United Kingdom</h4>
                 </div>
-                <div class="sub-section-title-middle">
-                    <a href="https://www.charterhouse.org.uk/">Charterhouse</a> is one of the UK’s leading independent boarding school
-                </div>
+                <a href="https://www.charterhouse.org.uk/" class="sub-section-title-middle">Charterhouse</a> is one of the UK’s leading independent boarding school
                 <div class="sub-section-title-bottom">
                     <h4>Cambridge Pre-U</h4>
                     <h4>Sep 2013 – Jul 2018</h4>
@@ -98,18 +92,16 @@
                     <p>I practised karate in the Shotokan Karate style and was awarded a black belt after five years of training. I completed a 50 miles walk in 16 hours.</p>
                     <p>I was awarded two academic scholarship prizes: the Senior and the Additional Scholarship. The latter being awarded to only 3 students in their final year.</p>
                 </div>
-            </div>
+            </article>
             <!-- Charterhouse sub-section end -->
             <div class="sub-section divider"></div>
             <!-- YK Pao sub-section start -->
-            <div class="sub-section">
+            <article class="sub-section">
                 <div class="sub-section-title-top">
                     <h3>YK Pao School</h3>
                     <h4>Shanghai, China</h4>
                 </div>
-                <div class="sub-section-title-middle">
-                    <a href="https://www.ykpaoschool.cn/">YK Pao</a> is a pioneering international Chinese school
-                </div>
+                <a href="https://www.ykpaoschool.cn/" class="sub-section-title-middle">YK Pao</a> is a pioneering international Chinese school
                 <div class="sub-section-title-bottom">
                     <h4>Exchange student</h4>
                     <h4>Mar 2015 – Mar 2015</h4>
@@ -119,23 +111,21 @@
                     <p>I would spend my weekdays at the school, where I shared a room with 3 local boys my age. I fully immersed myself in the day-to-day life of a student at YK Pao School, from the traditional meals to the afternoon activities. During my time there, I was part of the sprint team in the athletics club and attended training every day. </p>
                     <p>I also witnessed the poverty of rural areas and learnt about the history of Shanghai as I was guided by my host family through narrow streets, where beautiful temples and colossal shopping malls contrasted with swarming slums.</p>
                 </div>
-            </div>
+            </article>
             <!-- YK Pao sub-section end -->
             <div class="sub-section divider"></div>
-        </div>
+        </article>
         <!-- Education section end -->
         <!-- Experience section start -->
-        <div class="section">
+        <article class="section">
             <h2>Experience</h2>
             <!-- Selectra sub-section start -->
-            <div class="sub-section">
+            <article class="sub-section">
                 <div class="sub-section-title-top">
                     <h3>Selectra</h3>
                     <h4>Lyon, France</h4>
                 </div>
-                <div class="sub-section-title-middle">
-                    <a href="https://selectra.info/">Selectra</a> provides comparison and subscription services for managing utility contracts
-                </div>
+                <a href="https://selectra.info/" class="sub-section-title-middle">Selectra</a> provides comparison and subscription services for managing utility contracts
                 <div class="sub-section-title-bottom">
                     <h4>Product Manager</h4>
                     <h4>Sep 2022 - present</h4>
@@ -146,18 +136,16 @@
                     <p>I continuously meet with our users to emphasize with them and to understand their motivations by asking "why". This helps me identify a theme and define a clear problem to be solved, which I translate into user stories with acceptance criteria, and hypotheses to be tested. When the problem requires a creative solution, I use "How might we" statements and the jobs-to-be-done framework and I invite the whole team to ideate together.</p>
                     <p>I then build, refine, and prioritize our backlog to best achieve our goals and deliver value rapidly. The hardest part of my job is saying "no", deciding what not to build and assuming the consequences of that decision. I seek feedback from our users as early as possible with rapid testing of ideas. I work closely with software engineers and drive story mapping workshops.</p>
                 </div>
-            </div>
+            </article>
             <!-- Selectra sub-section end -->
             <div class="sub-section divider"></div>
             <!-- Microsoft sub-section start -->
-            <div class="sub-section">
+            <article class="sub-section">
                 <div class="sub-section-title-top">
                     <h3>Microsoft</h3>
                     <h4>London, United Kingdom</h4>
                 </div>
-                <div class="sub-section-title-middle">
-                    <a href="https://www.microsoft.com/">Microsoft</a> provides cloud services, computer software and hardware, and other digital services
-                </div>
+                <a href="https://www.microsoft.com/" class="sub-section-title-middle">Microsoft</a> provides cloud services, computer software and hardware, and other digital services
                 <div class="sub-section-title-bottom">
                     <h4>Product Manager Intern</h4>
                     <h4>Apr 2021 - Sep 2021</h4>
@@ -169,18 +157,16 @@
                     <p>Alongside a QA test analyst, I triaged defects on Cortana weekly. I prioritized bugs, directed them to the right development teams, and replied to partners when necessary.</p>
                     <p>I also coordinated ongoing experimentations of new features on Edge, ensuring feature teams had a hypothesis that could be validated with data and gave an update on each experiment during the Edge weekly meeting. I collaborated with PMs and Engineers to ensure no team was blocked and that experiments ran smoothly.</p>
                 </div>
-            </div>
+            </article>
             <!-- Microsoft sub-section end -->
             <div class="sub-section divider"></div>
             <!-- R3 sub-section start -->
-            <div class="sub-section">
+            <article class="sub-section">
                 <div class="sub-section-title-top">
                     <h3>R3</h3>
                     <h4>London, United Kingdom</h4>
                 </div>
-                <div class="sub-section-title-middle">
-                    <a href="https://r3.com/">R3</a> provides software platforms designed for organizations in regulated markets
-                </div>
+                <a href="https://r3.com/" class="sub-section-title-middle">R3</a> provides software platforms designed for organizations in regulated markets
                 <div class="sub-section-title-bottom">
                     <h4>Solutions Engineer Intern</h4>
                     <h4>Jun 2020 - Sep 2020</h4>
@@ -192,18 +178,16 @@
                     <p>I composed a range of technical specification documents outlining the requirements for a minimal viable product and designed a prototype user interface for each stakeholder.</p>
                     <p>Through this project, I was able to demonstrate near-real-time settlement of RECs, automated and decentralised issuance process, and trace back to the provenance of RECs thereby increasing transparency.</p>
                 </div>
-            </div>
+            </article>
             <!-- R3 sub-section end -->
             <div class="sub-section divider"></div>
             <!-- Teaching Assistant sub-section start -->
-            <div class="sub-section">
+            <article class="sub-section">
                 <div class="sub-section-title-top">
                     <h3>Imperial College London</h3>
                     <h4>London, United Kingdom</h4>
                 </div>
-                <div class="sub-section-title-middle">
-                    <a href="https://www.imperial.ac.uk/">Imperial College</a> is a global top ten university with a world-class reputation in engineering
-                </div>
+                <a href="https://www.imperial.ac.uk/" class="sub-section-title-middle">Imperial College</a> is a global top ten university with a world-class reputation in engineering
                 <div class="sub-section-title-bottom">
                     <h4>Undergraduate Teaching Assistant</h4>
                     <h4>Oct 2020 - Jun 2020</h4>
@@ -213,35 +197,31 @@
                     <p>I sat with them until we found a solution and encouraged them to lead the discussion. My role was to guide them back onto the right track while providing clarifications regarding their assignment.</p>
                     <p>Occasionally, I recommended alternative approaches that solved the same problem resulting in simpler code. I enjoyed most offering suggestions in taking the exercise further and making it more fun, whether it'd be implementing an additional encryption algorithm from scratch or only using java streams to complete the assignment.</p>
                 </div>
-            </div>
+            </article>
             <!-- Teaching Assistant sub-section end -->
             <div class="sub-section divider"></div>
             <!-- ABB sub-section start -->
-            <div class="sub-section">
+            <article class="sub-section">
                 <div class="sub-section-title-top">
                     <h3>ABB</h3>
                     <h4>Milton Keynes, United Kingdom</h4>
                 </div>
-                <div class="sub-section-title-middle">
-                    <a href="https://new.abb.com/">ABB</a> is a technology leader in electrification and automation
-                </div>
+                <a href="https://new.abb.com/" class="sub-section-title-middle">ABB</a> is a technology leader in electrification and automation
                 <div class="sub-section-title-bottom">
                     <h4>Robotics Trainee</h4>
                     <h4>Jul 2020 - Jul 2020</h4>
                 </div>
-                <div class="content">
-                    <p>I was trained to use an IRB 2400 robot using the Industrial Robot Controller 5 (IRC5), the robotic industry’s benchmark in robot controller technology. </p>
-                    <p>I programmed the robot in RAPID, a high-level programming language used to control ABB industrial robots. I learnt about the robot's motion, it's many internal and external axes, and how to define different coordinate systems based on the task to accomplish. </p>
-                    <p>In particular, I understood how to use the Tool Coordinate System to specify a tool’s centre point and orientation when the robot was holding a work object. That way, when that tool was active, the programmed path and speed were related to the work object.</p>
-                    <p>I worked with a team of experienced technicians from the automotive industry and learnt about real-life use cases from our discussions. By the end of the training, I received an IRC5 certification.</p>
-                </div>
-            </div>
+                <p>I was trained to use an IRB 2400 robot using the Industrial Robot Controller 5 (IRC5), the robotic industry’s benchmark in robot controller technology. </p>
+                <p>I programmed the robot in RAPID, a high-level programming language used to control ABB industrial robots. I learnt about the robot's motion, it's many internal and external axes, and how to define different coordinate systems based on the task to accomplish. </p>
+                <p>In particular, I understood how to use the Tool Coordinate System to specify a tool’s centre point and orientation when the robot was holding a work object. That way, when that tool was active, the programmed path and speed were related to the work object.</p>
+                <p>I worked with a team of experienced technicians from the automotive industry and learnt about real-life use cases from our discussions. By the end of the training, I received an IRC5 certification.</p>
+            </article>
             <!-- ABB sub-section end -->
             <div class="sub-section divider"></div>
-        </div>
+        </article>
         <!-- Experience section end -->
-    </div>
-    <!-- Container end -->
+    </main>
+    <!-- Main end -->
 
 
     <!-- Particles settings start -->
