--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <title>Cyprien Roche</title>
+    <link rel="icon" type="image/x-icon" href="/resources/favicon_io/favicon.ico" />
     <script type="text/javascript" src="particles.js"></script>
 
     <meta property='og:title' content='My personal website' />
