Make links open in new tab and add change 1s life experience

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <h3>Imperial College London</h3>
                     <h4>London, United Kingdom</h4>
                 </div>
-                <a href="https://www.imperial.ac.uk/" class="sub-section-title-middle">Imperial College</a> is a global top ten university with a world-class reputation in engineering
+                <a href="https://www.imperial.ac.uk/" class="sub-section-title-middle" target="_blank">Imperial College</a> is a global top ten university with a world-class reputation in engineering
                 <div class="sub-section-title-bottom">
                     <h4>Master of Engineering, Computing</h4>
                     <h4>Sep 2018 – Jul 2022</h4>
@@ -65,7 +65,7 @@
                     <h3>Universidad Politecnica de Madrid</h3>
                     <h4>Madrid, Spain</h4>
                 </div>
-                <a href="https://www.upm.es/" class="sub-section-title-middle">UPM</a> is a top university in Spain with a strong reputation in engineering
+                <a href="https://www.upm.es/" class="sub-section-title-middle" target="_blank">UPM</a> is a top university in Spain with a strong reputation in engineering
                 <div class="sub-section-title-bottom">
                     <h4>European Master in Software Engineering</h4>
                     <h4>Sep 2021 – Jul 2022</h4>
@@ -82,7 +82,7 @@
                     <h3>Charterhouse school</h3>
                     <h4>Godalming, United Kingdom</h4>
                 </div>
-                <a href="https://www.charterhouse.org.uk/" class="sub-section-title-middle">Charterhouse</a> is one of the UK’s leading independent boarding school
+                <a href="https://www.charterhouse.org.uk/" class="sub-section-title-middle" target="_blank">Charterhouse</a> is one of the UK’s leading independent boarding school
                 <div class="sub-section-title-bottom">
                     <h4>Cambridge Pre-U</h4>
                     <h4>Sep 2013 – Jul 2018</h4>
@@ -102,7 +102,7 @@
                     <h3>YK Pao School</h3>
                     <h4>Shanghai, China</h4>
                 </div>
-                <a href="https://www.ykpaoschool.cn/" class="sub-section-title-middle">YK Pao</a> is a pioneering international Chinese school
+                <a href="https://www.ykpaoschool.cn/" class="sub-section-title-middle" target="_blank">YK Pao</a> is a pioneering international Chinese school
                 <div class="sub-section-title-bottom">
                     <h4>Exchange student</h4>
                     <h4>Mar 2015 – Mar 2015</h4>
@@ -126,7 +126,7 @@
                     <h3>Selectra</h3>
                     <h4>Lyon, France</h4>
                 </div>
-                <a href="https://selectra.info/" class="sub-section-title-middle">Selectra</a> provides comparison and subscription services for managing utility contracts
+                <a href="https://selectra.info/" class="sub-section-title-middle" target="_blank">Selectra</a> provides comparison and subscription services for managing utility contracts
                 <div class="sub-section-title-bottom">
                     <h4>Product Manager</h4>
                     <h4>Sep 2022 - present</h4>
@@ -146,7 +146,7 @@
                     <h3>Microsoft</h3>
                     <h4>London, United Kingdom</h4>
                 </div>
-                <a href="https://www.microsoft.com/" class="sub-section-title-middle">Microsoft</a> provides cloud services, computer software and hardware, and other digital services
+                <a href="https://www.microsoft.com/" class="sub-section-title-middle" target="_blank">Microsoft</a> provides cloud services, computer software and hardware, and other digital services
                 <div class="sub-section-title-bottom">
                     <h4>Product Manager Intern</h4>
                     <h4>Apr 2021 - Sep 2021</h4>
@@ -167,7 +167,7 @@
                     <h3>R3</h3>
                     <h4>London, United Kingdom</h4>
                 </div>
-                <a href="https://r3.com/" class="sub-section-title-middle">R3</a> provides software platforms designed for organizations in regulated markets
+                <a href="https://r3.com/" class="sub-section-title-middle" target="_blank">R3</a> provides software platforms designed for organizations in regulated markets
                 <div class="sub-section-title-bottom">
                     <h4>Solutions Engineer Intern</h4>
                     <h4>Jun 2020 - Sep 2020</h4>
@@ -182,13 +182,33 @@
             </article>
             <!-- R3 sub-section end -->
             <div class="sub-section divider"></div>
+            <!-- Change 1s Life sub-section start -->
+            <article class="sub-section">
+                <div class="sub-section-title-top">
+                    <h3>Change 1's Life</h3>
+                    <h4>Remote</h4>
+                </div>
+                <a href="https://change1slife.co.uk/" class="sub-section-title-middle" target="_blank">Change 1’s Life</a> contributes to the reduction of poverty in Angola, Africa.
+                <div class="sub-section-title-bottom">
+                    <h4>Web Designer and Developer</h4>
+                    <h4>Apr 2020 - Jul 2020</h4>
+                </div>
+                <div class="content">
+                    <p>I developed Dora, a web application designed to help Change 1's Life organize and manage their donations.</p>
+                    <p>I engaged in discussions with the charity to better understand their needs and the challenges they face. I connected with a range of charity members, from the passionate founder to the dedicated part-time volunteer. Through a series of interviews, I was able to broaden my vision of the world and become more aware of the socio-economic challenges present in Sub-Saharan countries</p>
+                    <p>I exploited methods and practices in Human-Centered Design to design a product that engages and meets the needs of the relevant stakeholders within our context: charity members and donors.</p>
+                    <p>During the fifth week, my group and I presented our project to a group of lecturers at Imperial College as well as designers from the Royal College of Art and came second out of fifty teams.</p>
+                </div>
+            </article>
+            <!-- Change 1s Lifesub-section end -->
+            <div class="sub-section divider"></div>
             <!-- Teaching Assistant sub-section start -->
             <article class="sub-section">
                 <div class="sub-section-title-top">
                     <h3>Imperial College London</h3>
                     <h4>London, United Kingdom</h4>
                 </div>
-                <a href="https://www.imperial.ac.uk/" class="sub-section-title-middle">Imperial College</a> is a global top ten university with a world-class reputation in engineering
+                <a href="https://www.imperial.ac.uk/" class="sub-section-title-middle" target="_blank">Imperial College</a> is a global top ten university with a world-class reputation in engineering
                 <div class="sub-section-title-bottom">
                     <h4>Undergraduate Teaching Assistant</h4>
                     <h4>Oct 2020 - Jun 2020</h4>
@@ -207,7 +227,7 @@
                     <h3>ABB</h3>
                     <h4>Milton Keynes, United Kingdom</h4>
                 </div>
-                <a href="https://new.abb.com/" class="sub-section-title-middle">ABB</a> is a technology leader in electrification and automation
+                <a href="https://new.abb.com/" class="sub-section-title-middle" target="_blank">ABB</a> is a technology leader in electrification and automation
                 <div class="sub-section-title-bottom">
                     <h4>Robotics Trainee</h4>
                     <h4>Jul 2020 - Jul 2020</h4>
