Change title to Cyprien Roche

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/resources/favicon_io/favicon.ico" />
     <script type="text/javascript" src="particles.js"></script>
 
-    <meta property='og:title' content='My personal website' />
+    <meta property='og:title' content='Cyprien Roche' />
     <meta property='og:description' content='Here you can find out more about my background.' />
     <meta property='og:image' content='resources/Preview.png' />
     <meta property='og:url' content='https://cyprienroche.github.io/' />
