update location for selectra experience and add Lyon subsection title top

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             <article class="sub-section">
                 <div class="sub-section-title-top">
                     <h3>Selectra</h3>
-                    <h4>Lyon, France</h4>
+                    <h4>Madrid, Spain</h4>
                 </div>
                 <a href="https://selectra.info/" class="sub-section-title-middle" target="_blank">Selectra</a> provides comparison and subscription services for managing utility contracts
                 <!-- Selectra Madrid sub-sub-section start -->
                 <div class="sub-section-title-bottom">
-                    <h4>Product Manager</h4>
+                    <h4>Product Manager, Drupal Team</h4>
                     <h4>Sep 2023 - Present</h4>
                 </div>
                 <p>I am currently responsible for Selectra’s main acquisition channel together with the marketing team across 17 countries. We attract 350 million visitors per year across our websites, which include: jechange.fr, tarifaluzhora.es, luce-gas.it.</p>
@@ -57,8 +57,12 @@
                 <!-- Selectra Madrid sub-sub-section end -->
                  <br>
                 <!-- Selectra Lyon sub-sub-section start -->
+                <div class="sub-section-title-top">
+                    <h3></h3>
+                    <h4>Lyon, France</h4>
+                </div>
                 <div class="sub-section-title-bottom">
-                    <h4>Product Manager</h4>
+                    <h4>Product Manager, Integration Team</h4>
                     <h4>Sep 2022 - Aug 2023</h4>
                 </div>
                 <p>I led the development of a game-changing digital platform which increased deal closures by 20%. This enabled us to sign deals with real estate agencies, such as Century 21 France.</p>
